--- a/动态规划.md
+++ b/动态规划.md
@@ -12,6 +12,7 @@
 初始状态：长度为1或者长度为2的可以直接判定是否为回文串。为了方便定义f[i,i]为长度为0的串,f[i,i+1]为长度为1的串，计算初始值是否为True。
 状态转移方程：当长度大于2的时候，判断最左和最右的字符是否相等，然后在继续判断剩余的串f[i + 1][j - 1]是回文串。所以转移方程为f[i][j] = f[i + 1][j - 1]并且s[i] == s[j]
 
+```text
 class Solution:
     def longestPalindrome(self, s: str) -> str:
         ans = ""
@@ -31,12 +32,14 @@ class Solution:
                 if f[i][j] and l + 1 > len(ans):
                     ans = s[i:j + 1]
         return ans
+```
 
 72. 编辑距离
 状态的定义：对于插入，删除，替换的三种操作。可以证明任意两个字符串s1,s2的最长编辑距离为s1和s2的长度最小值。假设存在一对相同的字符，那么编辑距离长度就可以减少1。对于存在k不相交的字符，那么就最长编辑距离就可以对应减少k。那么问题就可以被定义为f[i][j]为s1串的前i个和s2串的前j个的最小编辑距离。
 初始状态：对于s1为0，s2的长度为k，f[0][k]的最小编辑距离为k。对于s1长度为k，s2长度为0费，f[k][0]的最小编辑距离为k。
 状态转移方程：假设当前匹配s1的长为i，s2的长度为j。当s1[i] == s2[j]时，f[i][j] = max(f[i][j], f[i - 1][j - 1])。否则f[i][j] = max(f[i - 1][j], f[i][j - 1], f[i - 1][j - 1]) + 1
 
+```text
 class Solution:
     def minDistance(self, word1: str, word2: str) -> int:
         n1 = len(word1)
@@ -62,6 +65,7 @@ class Solution:
         #     for j in range(n2 + 1):
         #         print(i, j, f[i][j])
         return f[n1][n2]
+```
 
 198. 打家劫舍
 状态表示：f[i]表示打劫过前i个房屋的最大收益。
@@ -80,12 +84,10 @@ class Solution:
         # print(f)
         return f[len(nums)]
 
-s = Solution()
-print(Solution.rob(s,[2,7,9,3,1]))
-
 213. 打家劫舍 II
 版本2和版本的方法是类似的。问题的区别在于第一个和最后一个房子不能同时被打劫。那么只要把当前问题拆封成第一个房子不拆的最大值和最后一个房子不拆的最大值即可。
 
+```text
 class Solution:
     def rob(self, nums: List[int]) -> int:
         if len(nums) == 1:
@@ -103,8 +105,9 @@ class Solution:
 
         # print(f)
         return f[len(nums)]
+```
 
-516. 最长回文子序列 TODO
+516. 最长回文子序列
 状态的定义：定义子串f[i,j]为最大回文子串长度。g[i][j]为max(f[i'][j']), i'>=i, j'<=j
 初始状态：长度为1的时候,f[i][j] = g[i][j] = 1，当长度为2的时候,f[i][i + 1] = g[i][j + 1] = 1 + (1 || s[i] == s[j])
 状态转移方程：f[i][j] = max(f[i'][j'])，i'>i，j'<j,
@@ -112,6 +115,7 @@ class Solution:
 转移方程为g[i][j] = max(f[i][j], g[i + 1][j], g[i][j - 1])
 最终的转移方程可以优化为f[i][j] = max(f[i][j], g[i + 1][j - 1] + 2 || s[i] == s[j])
 
+```text
 class Solution:
     def longestPalindromeSubseq(self, s: str) -> str:
         ans = 0
@@ -141,13 +145,14 @@ class Solution:
                     ans = max(ans, f[i][j])
                 # print(i, j, f[i][j], g[i][j])
         return ans
-
+```
 
 674. 最长连续递增序列
 状态表示：f[i]表示前i个串的最大子序列的长度
 初始状态：当长度为0的时候，f[0] = 0
 状态转移：当第i位比第i-1位大的时候f[i] = max(f[i], f[i - 1] + 1)，否则长度为1
 
+```text
 class Solution:
     def findLengthOfLCIS(self, nums: List[int]) -> int:
         ans = 0
@@ -159,3 +164,4 @@ class Solution:
             ans = max(ans, f[i])
         # print(f)
         return ans
+```
