--- a/动态规划.md
+++ b/动态规划.md
@@ -71,6 +71,8 @@ class Solution:
 状态表示：f[i]表示打劫过前i个房屋的最大收益。
 初始状态：当一个房子都没有打劫的情况下，f[0] = 0
 状态转移：当打劫第i个房子的时候，上一个房子是不能打劫的。所以f[i] = max(f[i], nums[i - 1], f[i - 2] + nums[i - 1])。当不打劫第i个房子的时候，上一个房子是允许打劫的。所以f[i] = max(f[i], f[i - 1])
+
+```text
 class Solution:
     def rob(self, nums: List[int]) -> int:
         f = [0 for _ in range(len(nums) + 1)]
@@ -83,6 +85,7 @@ class Solution:
 
         # print(f)
         return f[len(nums)]
+```
 
 213. 打家劫舍 II
 版本2和版本的方法是类似的。问题的区别在于第一个和最后一个房子不能同时被打劫。那么只要把当前问题拆封成第一个房子不拆的最大值和最后一个房子不拆的最大值即可。
